gccida/c3/redirect_edge_and_branch
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_and_branch/src/cfgrtl.c:1316:4: error: expected ';' after expression
rtx v44; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_and_branch/src/cfgrtl.c:1316:5: error: use of undeclared identifier 'v44'
rtx v44; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_and_branch/src/cfgrtl.c:1320:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_and_branch/src/cfgrtl.c:1320:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_and_branch/src/cfgrtl.c:1321:4: error: expected ';' after expression
rtx v49; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_and_branch/src/cfgrtl.c:1321:5: error: use of undeclared identifier 'v49'
rtx v49; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_and_branch/src/cfgrtl.c:1323:4: error: expected ';' after expression
rtx v51; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_and_branch/src/cfgrtl.c:1323:5: error: use of undeclared identifier 'v51'
rtx v51; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_and_branch/src/cfgrtl.c:1325:4: error: expected ';' after expression
rtx v53; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_and_branch/src/cfgrtl.c:1325:5: error: use of undeclared identifier 'v53'
rtx v53; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_and_branch/src/cfgrtl.c:1328:4: error: expected ';' after expression
rtx v56; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_and_branch/src/cfgrtl.c:1328:5: error: use of undeclared identifier 'v56'
rtx v56; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_and_branch/src/cfgrtl.c:1345:12: error: expected ';' after expression
v9 = ( rtx)end[2]; 
           ^
           ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_and_branch/src/cfgrtl.c:1347:33: error: expected expression
v9 = single_set_2( end, *( rtx *)&end[2]); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_and_branch/src/cfgrtl.c:1354:28: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v28 = ( unsigned __int16 *)target->head[1]; 
                           ^~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_and_branch/src/cfgrtl.c:1462:1: error: use of undeclared identifier 'v44'
v44 = delete_insn( rtx); 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_and_branch/src/cfgrtl.c:1464:7: error: use of undeclared identifier 'v44'
rtx = v44; 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_and_branch/src/cfgrtl.c:1473:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v46 = (  struct rtx_def *)end[4]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_and_branch/src/cfgrtl.c:1476:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v47.rtwint = ( __int64)v46[1].fld[0]; 
                       ^~~~~~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/redirect_edge_and_branch/src/obj/cfgrtl.o] Error 1
